fix: tooltip arrow not visible

--- a/renderer/src/index.css
+++ b/renderer/src/index.css
@@ -108,6 +108,7 @@ code {
 }
 
 .tooltip::after {
+  z-index: 20;
   content: "";
   position: absolute;
 
